# ai-box

./: Dockerfile  app.py  models.py  pyproject.toml
